--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dev = [
 	"pytest-cov",
 	"pytest-mock",
 	"black==22.8.0",
-	"ruff==0.0.257"
+	"ruff==0.0.257",
+	"mypy"
 	]
 
 # Linter settings
@@ -63,3 +64,22 @@ preview = true
 omit = []
 [tool.pytest.ini_options]
 addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
+
+# Type checking
+[tool.mypy]
+# Specify the Python version you are using
+python_version = "3.10"
+
+
+# Exclude specific files or directories from type checking
+# Example:
+# exclude = ["tests"]
+exclude = ["tests","build"]
+disallow_untyped_defs = false
+warn_unused_ignores = true
+warn_unused_configs = true
+warn_no_return = true
+warn_return_any = false
+warn_unreachable = true
+show_error_codes = true
+pretty = true
