--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,5 +104,6 @@ extensions = [
     "sphinx.ext.autosectionlabel",
     "nbsphinx",
     "sphinx_mdinclude",
+	"sphinx.ext.autosummary",
 ]
 html_theme = "sphinx_rtd_theme"
