--- a/{{cookiecutter.project_name}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/tests.yml
@@ -1,3 +1,4 @@
+{% raw %}
 name: Tests
 on: [push, pull_request, workflow_dispatch]
 
@@ -28,3 +29,4 @@ jobs:
       - name: Test with pytest
         run: |
           coverage run -m pytest
+{% endraw %}
