feat() : add jupyter notebook to docker

--- a/{{cookiecutter.project_slug}}/Dockerfile
+++ b/{{cookiecutter.project_slug}}/Dockerfile
@@ -14,3 +14,10 @@ COPY {{cookiecutter.project_slug}}/ /app
 
 RUN pip install .[dev]
 
+
+{% if cookiecutter.create_jupyter_notebook == "yes"  %}
+
+RUN python -m ipykernel install --user --name=venv 
+CMD ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root"]
+
+{% endif %}
