--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 # Environment settings
 requires-python = ">=3.8"
 dependencies = [
-	"appeal",
+	"click",
 	{% if cookiecutter.create_jupyter_notebook == "yes"  %}"jupyter"{% endif %}
 ]
 
